--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,14 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch src/Db/db.json"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.3",
+    "axios": "^1.12.2",
+    "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
