--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/react-query": "^5.90.3",
     "axios": "^1.12.2",
+    "firebase": "^12.4.0",
     "framer-motion": "^12.23.24",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.4",
+    "react-toastify": "^11.0.5",
     "remixicon": "^4.7.0",
     "swiper": "^12.0.2",
     "tailwindcss": "^4.1.14"
